--- a/templates/conf.d/20-lmtp.conf.erb
+++ b/templates/conf.d/20-lmtp.conf.erb
@@ -9,11 +9,16 @@
 # the mail to the detail mailbox. See also recipient_delimiter and
 # lda_mailbox_autocreate settings.
 #lmtp_save_to_detail_mailbox = no
-<% if @lmtp_save_to_detail_mailbox -%>
-lmtp_save_to_detail_mailbox = <%= @lmtp_save_to_detail_mailbox %>
-<% end -%>
+<% if defined?(@lmtp_save_to_detail_mailbox) -%>
+lmtp_save_to_detail_mailbox = <%= @lmtp_save_to_detail_mailbox ? 'yes' : 'no' %>
+<%- end %>
 
 protocol lmtp {
+
+<% if @postmaster_address -%>
+  postmaster_address = <%= @postmaster_address %>
+<% end -%>
+
   # Space separated list of plugins to load (default is global mail_plugins).
   #mail_plugins = $mail_plugins
 <% if @lmtp_mail_plugins -%>
