--- a/templates/conf.d/auth-ldap.conf.ext.erb
+++ b/templates/conf.d/auth-ldap.conf.ext.erb
@@ -1,4 +1,4 @@
-# Authentication for LDAP users. Included from auth.conf.
+# Authentication for LDAP users. Included from 10-auth.conf.
 #
 # <doc/wiki/AuthDatabase.LDAP.txt>
 
@@ -24,12 +24,14 @@ userdb {
   driver = ldap
   args = <%= @directory %>/dovecot-ldap.conf.ext
 <% end -%>
+  
+  # Default fields can be used to specify defaults that LDAP may override
+  #default_fields = home=/home/virtual/%u
 }
 
 # If you don't have any user-specific settings, you can avoid the userdb LDAP
 # lookup by using userdb static instead of userdb ldap, for example:
 # <doc/wiki/UserDatabase.Static.txt>
-
 #userdb {
   #driver = static
   #args = uid=vmail gid=vmail home=/var/vmail/%u
