--- a/templates/conf.d/auth-passwdfile.conf.ext.erb
+++ b/templates/conf.d/auth-passwdfile.conf.ext.erb
@@ -1,22 +1,27 @@
-# Authentication for passwd-file users. Included from auth.conf.
+# Authentication for passwd-file users. Included from 10-auth.conf.
 #
 # passwd-like file with specified location.
 # <doc/wiki/AuthDatabase.PasswdFile.txt>
 
 passdb {
   driver = passwd-file
-  <% if @auth_passwdfile_passdb -%>
-  args = <%= @auth_passwdfile_passdb %>
-  <% else %>
+  <%- if @auth_passwdfile_passdb %>
+  args = <%= @auth_passwdfile_passdb -%>
+  <%- else %>
   args = scheme=CRYPT username_format=%u <%= @directory %>/users
-  <% end -%>
+  <%- end %>
 }
 
 userdb {
   driver = passwd-file
-  <% if @auth_passwdfile_userdb -%>
-  args = <%= @auth_passwdfile_userdb %>
-  <% else %>
+  <%- if @auth_passwdfile_userdb %>
+  args = <%= @auth_passwdfile_userdb -%>
+  <%- else %>
   args = username_format=%u <%= @directory %>/users
-  <% end -%>
+  <%- end %>
+  # Default fields that can be overridden by passwd-file
+  #default_fields = quota_rule=*:storage=1G
+
+  # Override fields from passwd-file
+  #override_fields = home=/home/virtual/%u
 }
